2015-03-08  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* progmodes/ruby-mode.el (ruby-syntax-before-regexp-re): Expect
	beginning of regexp also after open brace or vertical bar.
	(Bug#20026)

2015-03-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* battery.el (battery-echo-area-format): Simplify default.
	(battery-linux-sysfs): Standardize on energy&power.  Accept ADP1
	for AC adapter.

	* emacs-lisp/byte-opt.el (byte-optimize-form-code-walker): Don't try to
	unfold `closure's since byte-compile-unfold-lambda doesn't know how to
	do it.

2015-03-06  Oscar Fuentes  <ofv@wanadoo.es>

	* net/browse-url.el (browse-url-firefox): Remove outdated
	MS-Windows limitations.

2015-03-06  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* net/eudcb-ldap.el (eudc-ldap-cleanup-record-simple): Mark as
	obsolete.
	(eudc-ldap-cleanup-record-filtering-addresses): Add docstring.
	Don't clean up postal addresses if ldap-ignore-attribute-codings
	is set.  Combine mail addresses into one field. (Bug#17720)
	(eudc-ldap-simple-query-internal):
	Call eudc-ldap-cleanup-record-filtering-addresses instead of
	eudc-ldap-cleanup-record-simple.
	(eudc-ldap-get-field-list): Likewise.

2015-03-05  Ivan Shmakov  <ivan@siamics.net>

	* net/eww.el (eww-html-p): New function (bug#20009).
	(eww-render): Use it.

2015-03-05  Artur Malabarba  <bruce.connor.am@gmail.com>

	* desktop.el (desktop-buffer-info): Write docstring.
	(desktop-buffer-info): Use `pushnew' instead of `add-to-list' and
	unquote lamda.

	* emacs-lisp/package.el (package-refresh-contents): Update doc.

2015-03-05  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/js.el (js-mode-syntax-table): Add an entry for `.

2015-03-05  Stefan Monnier  <monnier@iro.umontreal.ca>

	Replace *-function vars with generic functions in cl-generic.
	* emacs-lisp/cl-generic.el (cl--generic-generalizer): New struct.
	(cl-generic-tagcode-function, cl-generic-tag-types-function): Remove.
	(cl--generic-t-generalizer): New const.